--- a/contato.html
+++ b/contato.html
@@ -8,33 +8,33 @@
     <link rel="stylesheet"  href="style.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-dark">
-                <a class="navbar-brand" href="#">Logo</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-              
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav ml-lg-auto">
-                    <li class="nav-item ">
-                      <a class="nav-link" href="page.html">Home</a>
-                    </li>
-                    <li class="nav-item ">
-                      <a class="nav-link" href="portfolio.html">Portfolio</span></a>
-                    </li>
-                    <li class="nav-item ">
-                      <a class="nav-link" href="vidadetradutor.html">Vida de Tradutor<span class="sr-only">(current)</a>
+  <header class="header">
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <a class="navbar-brand" href="#">Logo</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ml-lg-auto">
+                <li class="nav-item ">
+                  <a class="nav-link" href="page.html">Home</a>
+                </li>
+                <li class="nav-item ">
+                  <a class="nav-link" href="portfolio.html">Portfolio</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="vidadetradutor.html">Vida de Tradutor<span class="sr-only">(current)</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contato.html">Contato</a>
                   </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Contato <span class="sr-only">(current)</a>
-                      </li>
-                  </ul>
-                </div>
-              </nav>
-        </div>
-    </header>
+              </ul>
+            </div>
+          </nav>
+    </div>
+</header>
     <main>
         <section class="banner">
             <div class="container">
@@ -118,5 +118,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+    <script src="teste.js"></script>
+  </body>
 </html>
