--- a/page.html
+++ b/page.html
@@ -19,12 +19,12 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav ml-lg-auto">
                     <li class="nav-item ">
-                      <a class="nav-link" href="page.html">Home</a>
+                      <a class="nav-link active" href="page.html">Home</a>
                     </li>
                     <li class="nav-item ">
                       <a class="nav-link" href="portfolio.html">Portfolio</span></a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item ">
                         <a class="nav-link" href="vidadetradutor.html">Vida de Tradutor<span class="sr-only">(current)</a>
                     </li>
                     <li class="nav-item">
