--- a/contato.html
+++ b/contato.html
@@ -51,7 +51,7 @@
           
                           <div class="find-widget">
                             <a class="iconezap" href="whatsapp.png"></a>
-                            Celular: <a>+55 (11) 964463598</a>
+                            Celular: <a href="#">+55 (11) 964463598</a>
                           </div>
 
                           <div class="find-widget">
